--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-simple-image-slider": "^2.4.1",
     "react-simple-image-viewer": "^1.2.2",
     "web-vitals": "^2.1.4"
   },
