get designs seems finished, must look for bugs

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3002
 REACT_APP_NETWORKIP=192.168.1.55
+REACT_APP_ENDPOINT_URL=s3.ir-thr-at1.arvanstorage.com
+REACT_APP_BUCKETS3_NAME=fazlipro3dsky
